# stenographer

./: .gitignore  CHANGELOG.md  Makefile  README.md  logging.conf  pyproject.toml  requirements.txt
resources/fr/: abbrevs.json  expr_pron.json  phonemes_vocab.json
resources/tests/: syllable_tokens.json
src/stenographer/: __main__.py
src/stenographer/models/: tokenizers.py
tests/models/: test_tokenizers.py
